# vsomeip_applications

./: CMakeLists.txt  main.cpp
recipe-vcanreader/vcanreader/: vcanreader_1.0.bb
